kubernetes/simple-web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-app-deployment
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 3
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: simple-web-app-container
          image: chandimacba/simple-web-app:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
          - name: config-volume
            mountPath: /usr/src/app/config.properties
            subPath: config.properties
      volumes:
        - name: config-volume
          configMap:
            name: simple-web-app-config
