kubernetes/simple-web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-app-service
spec:
  selector:
    app: sample-app
  ports:
    - protocol: TCP
      port: 3000
