kubernetes/simple-web-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: simple.app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-web-app-service
                port:
                  number: 3000
